# Ludvig

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Source/Core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Light.h  Mesh.cpp  Mesh.h  Object.h  PostProcessingVolume.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h  Transform.cpp  Transform.h
Source/Data/: BindingData.cpp  BindingData.h  FileReader.cpp  ModelLoader.cpp  ModelLoader.h  SystemInformation.cpp  SystemInformation.h  UserConfig.cpp  UserConfig.h
Source/DearImGui/: imgui_impl_glfw.cpp
Source/Debug/: DebugLog.cpp  DebugLog.h
Source/GUI/: GUIManager.cpp  GUIManager.h  GUIWindow.h
Source/GUI/Windows/: GUICameraInspector.cpp  GUICameraInspector.h  GUIConsole.cpp  GUIConsole.h  GUIMeshInspector.cpp  GUIMeshInspector.h
Source/GUI/windows/Objects/: GWLightInspector.h  GWMeshInspector.h
Source/Rendering/: Cubemap.cpp  Cubemap.h  LightSettings.h  Material.h  MeshRenderer.cpp  MeshRenderer.h  RenderContext.cpp  RenderContext.h  RenderManager.cpp  RenderManager.h  RenderTechnique.cpp  RenderTechnique.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h  Window.cpp  Window.h
Source/Rendering/Buffers/: FrameBuffer.cpp  FrameBuffer.h  UniformBufferObject.cpp  UniformBufferObject.h  VertexBufferObject.cpp  VertexBufferObject.h
Source/Rendering/D3D/: Win32Window.cpp  Win32Window.h
Source/Rendering/D3D/D3DX11/: D3DX11ForwardRenderer.cpp  D3DX11ForwardRenderer.h  D3DX11RenderContext.cpp  D3DX11RenderContext.h  D3DX11RenderManager.cpp  D3DX11RenderManager.h
Source/Rendering/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLForwardRenderer.cpp  OpenGLForwardRenderer.h  OpenGLMeshRenderer.cpp  OpenGLMeshRenderer.h  OpenGLRenderContext.cpp  OpenGLRenderContext.h  OpenGLRenderManager.cpp  OpenGLRenderManager.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexAttrib.h  OpenGLWindow.cpp  OpenGLWindow.h
Source/Rendering/OpenGL/API/: OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexAttrib.cpp
Source/Rendering/Shader/: UniformBlock.cpp
Source/Rendering/Vulkan/: VulkanForwardRenderer.cpp  VulkanForwardRenderer.h  VulkanRenderContext.cpp  VulkanRenderContext.h  VulkanRenderManager.cpp  VulkanRenderManager.h  VulkanWindow.cpp  VulkanWindow.h
Source/Rendering/Vulkan/API/: VulkanDebugMessenger.cpp  VulkanDebugMessenger.h  VulkanExtensions.cpp  VulkanExtensions.h  VulkanGPU.cpp  VulkanGPU.h  VulkanQueueFamilyIndices.cpp  VulkanQueueFamilyIndices.h  VulkanSwapChain.h  VulkanSwapChainSupportDetails.cpp  VulkanSwapChainSupportDetails.h  VulkanValidationLayers.cpp  VulkanValidationLayers.h
Source/Scene/: Scene.h  SceneManager.cpp  SceneManager.h
source/GL/: glad.c
source/GUI/: GUIManager.cpp  GUIManager.h  GUIWindow.cpp  GUIWindow.h
source/GUI/windows/: GWCameraInspector.h  GWIncludes.h  GWLightInspector.h  GWLightSettingsInspector.h  GWMenuBar.cpp  GWMenuBar.h  GWMeshInspector.cpp  GWMeshInspector.h  GWObjectInspector.cpp  GWObjectInspector.h  GWPostProcessing.h  GWProfiler.cpp  GWProfiler.h
source/GUI/windows/Debug/: GWConsole.h  GWProfiler.cpp  GWProfiler.h
source/GUI/windows/Objects/: GWCameraInspector.h  GWLightInspector.h  GWObjectInspector.h
source/GUI/windows/Visual/: GWLightSettingsInspector.h  GWPostProcessing.h
source/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Light.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  PostProcessingVolume.h  Skybox.cpp  Skybox.h  Transform.cpp  Transform.h
source/core/scene/: Camera.cpp  Camera.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  PostProcessingVolume.cpp  PostProcessingVolume.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h
source/data/: BindingData.cpp  BindingData.h  FileReader.cpp  FileReader.h  ModelLoader.cpp  ModelLoader.h
source/debug/: DebugLog.cpp  DebugLog.h
source/rendering/: BufferObject.cpp  BufferObject.h  Cubemap.cpp  Cubemap.h  FrameBuffer.cpp  FrameBuffer.h  LightSettings.cpp  LightSettings.h  Material.cpp  Material.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferIndexer.cpp  VertexBufferIndexer.h  VertexBufferObject.cpp  Window.cpp  Window.h
source/rendering/Buffers/: FrameBuffer.cpp  FrameBuffer.h  UniformBufferObject.cpp  UniformBufferObject.h  VertexBufferObject.cpp  VertexBufferObject.h
source/rendering/Shader/: UniformBlock.cpp  UniformBlock.h
